style.scss
* {
  margin: 0;
  padding: 0;
  text-decoration: none;
  border: none;
  outline: none;
}

html {
  font-family: "Roboto", sans-serif;
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

:focus {
  outline: none;
}

ol,
ul {
  list-style: none;
}

input,
button,
textarea,
select {
  font: inherit;
}

a {
  outline: none;
  text-decoration: none;
  color: black;
  text-transform: uppercase;
}

h1, h2, h3, h4, h5, a, button, span {
  font-family: "Roboto Condensed", sans-serif;
  font-weight: bold;
  text-transform: uppercase;
}

span {font-size: 42px;}
h1 {font-size: 95px;}
h2 {font-size: 50px;}
h3 {font-size: 26px;}
h4 {font-size: 22px;}
h5, a {font-size: 20px;}

.nav-link {
  font-size: 14px;
  font-weight: medium;
}

p {font-size: 18px;}
.small {font-size: 16px;}
.large {font-size: 30px;}

